# examples

tutorial/: MODULE.bazel  WORKSPACE.bzlmod
tutorial/ios-app/: BUILD  foo.proto
tutorial/ios-app/UrlGet/: Test.swift
