bazel_dep(name = "apple_support", version = "1.3.1", repo_name = "build_bazel_apple_support")
bazel_dep(name = "rules_swift", version = "1.2.0", repo_name = "build_bazel_rules_swift")
bazel_dep(name = "rules_apple", version = "1.1.2", repo_name = "build_bazel_rules_apple")
bazel_dep(name = "rules_cc", version = "0.0.2")
bazel_dep(name = "rules_proto", version = "4.0.0")
bazel_dep(name = "rules_xcodeproj", version = "0.10.0", repo_name = "com_github_buildbuddy_io_rules_xcodeproj")

local_path_override(
    module_name = "rules_xcodeproj",
    path = "../../rules_xcodeproj", # IMPORTANT: should point to https://github.com/BalestraPatrick/rules_apple/tree/bzlmod-support
)

local_path_override(
    module_name = "rules_apple",
    path = "../../rules_apple", # IMPORTANT: should point to https://github.com/BalestraPatrick/rules_apple/tree/bzlmod-support
)

local_path_override(
    module_name = "rules_swift",
    path = "../../rules_swift", # IMPORTANT: should point to https://github.com/BalestraPatrick/rules_apple/tree/bzlmod-support
)
